--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/native-stack": "^7.13.0",
     "react": "19.2.3",
     "react-native": "0.84.0",
+    "react-native-nitro-modules": "^0.33.9",
+    "react-native-nitro-sound": "^0.2.10",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.24.0",
     "react-native-video": "^6.19.0",
